stage0/tests/snapshots/program__tests_fixtures_programs_basic_int_annotation.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/int_annotation.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
stderr:
<empty>
