stage0/tests/snapshots/program__tests_fixtures_programs_basic_let_polymorphic_lambda.snap
---
source: tests/fixtures.rs
assertion_line: 729
expression: transcript
---
fixture: tests/fixtures/programs/basic/let_polymorphic_lambda.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
true
stderr:
<empty>
