stage0/tests/snapshots/program__tests_fixtures_programs_basic_let_rebinding.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/let_rebinding.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
