stage0/tests/snapshots/program__tests_fixtures_programs_basic_list_cons_expression.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/programs/basic/list_cons_expression.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
4
0
3
stderr:
<empty>
