stage0/tests/snapshots/program__tests_fixtures_programs_basic_list_patterns.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/list_patterns.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3
empty
help
path.txt
input.ml
stderr:
<empty>
