stage0/tests/snapshots/program__tests_fixtures_programs_basic_mutual_recursion_annotated.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/programs/basic/mutual_recursion_annotated.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
true
stderr:
<empty>
