stage0/tests/snapshots/program__tests_fixtures_programs_basic_mutual_recursion_call_site_facts.snap
---
source: tests/fixtures.rs
assertion_line: 5793
expression: transcript
---
fixture: tests/fixtures/programs/basic/mutual_recursion_call_site_facts.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
ok
stderr:
<empty>
