stage0/tests/snapshots/program__tests_fixtures_programs_basic_mutual_recursion_partial_annotation.snap
---
source: tests/fixtures.rs
assertion_line: 5684
expression: transcript
---
fixture: tests/fixtures/programs/basic/mutual_recursion_partial_annotation.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
